# repository_alexandre_krispin

./: README  article.tex  cv.tex
configuration_files_for_text_editors/: README
configuration_files_for_text_editors/emacs_configuration_files/: init.el
configuration_files_for_text_editors/emacs_configuration_files/.emacs.d/: #recentf#  init.el  init.el~  initel  recentf  recentf~
configuration_files_for_text_editors/emacs_configuration_files/.emacs.d/easymacs/w3/: .cvsignore  ChangeLog  ChangeLog.1  ChangeLog.3  INSTALL  Makefile  README  TODO  build-dist  config.status  configure  configure.in
configuration_files_for_text_editors/emacs_configuration_files/.emacs.d/easymacs/w3/CVS/: Entries  Repository
configuration_files_for_text_editors/emacs_configuration_files/.emacs.d/easymacs/w3/contrib/: clean-cache  w3-imenu.el
configuration_files_for_text_editors/emacs_configuration_files/.emacs.d/easymacs/w3/contrib/CVS/: Entries  Repository  Root
configuration_files_for_text_editors/emacs_configuration_files/.emacs.d/easymacs/w3/etc/: Makefile
configuration_files_for_text_editors/emacs_configuration_files/.emacs.d/easymacs/w3/etc/CVS/: Entries  Repository
configuration_files_for_text_editors/emacs_configuration_files/.emacs.d/easymacs/w3/etc/w3/CVS/: Entries  Repository
configuration_files_for_text_editors/emacs_configuration_files/.emacs.d/easymacs/w3/etc/w3/pixmaps/CVS/: Entries  Repository
configuration_files_for_text_editors/emacs_configuration_files/.emacs.d/easymacs/w3/lisp/: .cvsignore  Makefile  Makefile.in  auto-autoloads.el  css.el  custom-load.el  descrip.mms  font.el  images.el  socks.el  w3-auto.el  w3-cfg.el  w3-cfg.el.in  w3-cfg.nt  w3-display.el  w3-forms.el  w3-java.el  w3-menu.el  w3-parse.el  w3-sysdp.el  w3.el
configuration_files_for_text_editors/emacs_configuration_files/.emacs.d/easymacs/w3/lisp/CVS/: Entries  Repository
configuration_files_for_text_editors/emacs_configuration_files/.emacs.d/easymacs/w3/tests/: url-test.el
configuration_files_for_text_editors/emacs_configuration_files/.emacs.d/easymacs/w3/tests/CVS/: Entries  Repository
configuration_files_for_text_editors/emacs_configuration_files/.emacs.d/easymacs/w3/texi/: Makefile  w3-faq.dvi  w3-faq.info  w3.dvi  w3.info
configuration_files_for_text_editors/emacs_configuration_files/.emacs.d/easymacs/w3/texi/CVS/: Entries  Repository
configuration_files_for_text_editors/vim_configuration_files/: .gvimrc  .vimrc  dot_gvimrc  dot_vim  dot_vimrc
configuration_files_for_text_editors/vim_configuration_files/.vim/: .VimballRecord  .VimballRecord~  .directory  .netrwhist  .netrwhist~  abbr.vim
templates_for_LaTeX/cv/: cv_moderncv.tex
templates_for_LaTeX/cv/examples/: moderncv_casual_version.tex  (+2 more)
templates_for_XeLaTeX/article/: example.tex  template_article.tex
templates_for_XeLaTeX/articles_and_reports/: article.aux  article.out  article.tex  article.toc
templates_for_XeLaTeX/cv/: template_cv_classicthesis.tex  template_cv_moderncv.tex
vim_configuration_files/: vimrc
(+1398 files in other folders)
